<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

<!--    <ImageView-->
<!--        android:id="@+id/iv_logo"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:src="@drawable/logo"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginLeft="68dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <ImageView-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:src="@drawable/back"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:layout_marginTop="66dp"
        android:layout_marginStart="12dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account">

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:padding="5dp"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/ivEdit"
            app:layout_constraintEnd_toStartOf="@+id/ivForward"
            app:layout_constraintStart_toEndOf="@+id/ivEdit"
            app:layout_constraintTop_toTopOf="@+id/ivEdit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_bmi"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.5"
                android:text="@string/tap_edit"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_forward"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayoutEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayoutEdit" />

        <ImageView
            android:id="@+id/ivLock"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:padding="5dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivEdit" />

        <LinearLayout
            android:id="@+id/linearLayoutgp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/ivLock"
            app:layout_constraintEnd_toStartOf="@+id/ivForward2"
            app:layout_constraintStart_toEndOf="@+id/ivLock"
            app:layout_constraintTop_toTopOf="@+id/ivLock">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.5"
                android:text="@string/tap_change"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivForward2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_forward"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayoutgp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayoutgp" />

        <ImageView
            android:id="@+id/ivQuestion"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:padding="5dp"
            android:src="@drawable/ic_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLock" />

        <LinearLayout
            android:id="@+id/bantuanLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/ivQuestion"
            app:layout_constraintEnd_toStartOf="@+id/ivForward3"
            app:layout_constraintStart_toEndOf="@+id/ivQuestion"
            app:layout_constraintTop_toTopOf="@+id/ivQuestion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/black" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivForward3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_forward"
            app:layout_constraintBottom_toBottomOf="@+id/bantuanLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bantuanLayout" />
        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:padding="5dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivQuestion" />

        <LinearLayout
            android:id="@+id/logoutLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/ivLogout"
            app:layout_constraintEnd_toStartOf="@+id/ivForward4"
            app:layout_constraintStart_toEndOf="@+id/ivLogout"
            app:layout_constraintTop_toTopOf="@+id/ivLogout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@color/black" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivForward4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_forward"
            app:layout_constraintBottom_toBottomOf="@+id/logoutLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logoutLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



